# qmlir

./: .clang-format  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CMakeLists.txt  README.md  demo_initial_values.py  format-cpp.sh  pyproject.toml  requirements.txt  test_mlir_phase1.py  test_phase1.py
backend/include/mlir/Dialect/Quantum/IR/: QuantumOps.td
backend/include/mlir/Dialect/Quantum/Passes/: Passes.td  QuantumPasses.h
backend/lib/Dialect/Quantum/: CMakeLists.txt  QuantumDialect.cpp  QuantumOps.cpp
examples/: bell_state.py  bell_state_demo.py  cancel_self_inverse.py  complete_pauli_gates.py  custom_circuit.py  demo_bell_state.py  demo_double_x.py  double_x_test.py  optimization_demo.py  parameterized_demo.py  phase_gates.py  test_input.mlir  vqe_ansatz.py
mlir/: CMakeLists.txt
mlir/include/mlir/Dialect/Quantum/: QuantumDialect.h  QuantumOps.h  QuantumOps.td  README.md
mlir/include/mlir/Dialect/Quantum/IR/: CMakeLists.txt  Quantum.h  QuantumConfig.h.in  QuantumOps.td  QuantumTraits.h
mlir/include/mlir/Dialect/Quantum/Passes/: CMakeLists.txt  Passes.td  QuantumPasses.h
mlir/lib/Dialect/Quantum/: CMakeLists.txt  QuantumCancelXPass.cpp  QuantumDialect.cpp  QuantumOps.cpp  QuantumOps.td  init.cpp
mlir/lib/Dialect/Quantum/Passes/: QuantumCancelSelfInversePass.cpp  QuantumCancelXPass.cpp
mlir/python/mlir/dialects/quantum/: README.md  __init__.py  emit_quantum_mlir.py
mlir/test/: lit.cfg.py
mlir/test/Dialect/Quantum/: bell_state.mlir  double_x_test.mlir  test-quantum-generic.mlir
mlir/test/lib/Dialect/Quantum/: CMakeLists.txt  test-quantum.cpp
mlir/test/python/dialects/quantum/: test_quantum_dialect.py
mlir/tools/: CMakeLists.txt  quantum-opt.cpp
notebooks/: 01_basic_gates.ipynb  01_basic_operators.ipynb  01_circuit_construction.ipynb  02_bell_states.ipynb  02_phase_gates.ipynb  02_phase_operators.ipynb  03_rotation_gates.ipynb  03_rotation_operators.ipynb  04_controlled_gates.ipynb  04_controlled_operators.ipynb  05_entanglement.ipynb  utils.py
qmlir/: __init__.py  ast.py  backend.py  bit.py  circuit.py  codegen.py  compiler.py  config.py  gate.py  mlir_generator.py  observable.py  operator.py  parameter.py  quantum_circuit.py  simulator.py  transpiler.py
qmlir/mlir/: __init__.py  compiler.py  config.py  transpiler.py
qmlir/runtime/: __init__.py  jax_backend.py
qmlir/runtime/jax/: __init__.py  circuit.py  engine.py  gate.py  observable.py  simulator.py
tests/: conftest.py  test_circuit.py  test_gate.py  test_integration.py  test_mlir.py  test_mlir_params.py  test_observable.py  test_operator.py  test_parameter.py  test_parametric.py  test_phase_gates.py  test_qmlir_bit.py  test_qmlir_circuit.py  test_qmlir_gate.py  test_qmlir_integration.py  test_qmlir_mlir_transpiler.py  test_qmlir_operator.py  test_qmlir_operator_composition.py  test_qmlir_operator_controlled.py  test_qmlir_parameter.py  test_qmlir_runtime_jax_engine.py  test_qmlir_runtime_jax_observable.py  test_qmlir_runtime_jax_simulator.py  test_runtime_jax_circuit.py  test_runtime_jax_engine.py  test_runtime_jax_gate.py  test_runtime_jax_observable.py  test_runtime_jax_simulator.py
